<?xml version="1.0"?>
<package format="3">
  <name>livox_laser_simulation</name>
  <version>0.0.0</version>
  <description>The livox_laser_simulation package</description>

  <maintainer email="lfc@todo.todo">lfc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
